--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,4 @@
 sudo: false
 
 script: 
- - git clone https://github.com/richelbilderbeek/cpp11_qmake_boost_gcov
- - git clone https://github.com/richelbilderbeek/cpp11_qmake_boost_gcov_bigger_project
- - git clone https://github.com/richelbilderbeek/cpp11_qmake_gcov
- - git clone https://github.com/richelbilderbeek/qmake_gcov
- - git clone https://github.com/richelbilderbeek/qmake_gcov_bigger_project
- - git clone https://github.com/richelbilderbeek/qmake_gprof
+ - ./build.sh
