--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
-sudo: false
+sudo: true
 
-addons:
-  apt:
-    packages:
-    - lyx
-    - texlive
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+
+install: 
+  - sudo apt-get install -qq lyx
+  - sudo apt-get install -qq texlive
 
 script: 
  - ./build.sh
