--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ before_install:
   - sudo add-apt-repository -y ppa:lyx-devel/release
   - sudo apt-get update -qq
 
-install: 
+install:
   - sudo apt-get install -qq lyx
   - sudo apt-get install -qq texlive
+  - sudo apt-get install -qq pgf
 
-script: 
+script:
  - ./build.sh
