--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - sudo apt-get install -qq lyx
   - sudo apt-get install -qq texlive
   - sudo apt-get install -qq pgf
+  - sudo apt-get install -qq qtikz
 
 script:
  - ./build.sh
