--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,13 @@ before_install:
 install:
   - sudo apt-get install -qq lyx
   - sudo apt-get install -qq texlive
-  - sudo apt-get install -qq texlive-fonts-extra
+  - sudo apt-get install -qq texlive*
+  #- sudo apt-get install -qq texlive-fonts-extra
   - sudo apt-get install -qq pgf
   - sudo apt-get install -qq graphviz
   - sudo apt-get install -qq qtikz
-  - sudo apt-get install -qq tlmgr
-  - sudo tlmgr pgf ms
+  #- sudo apt-get install -qq tlmgr
+  #- sudo tlmgr pgf ms
 
 script:
   - ./download_other_githubs.sh
