--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@
 *.lyx~
 *.lyx#
 .Rhistory
+images/CC-BY-SA_icon.pdf
+images/LLVM_Logo.pdf
+images/Qt_logo_2015.pdf
+images/SFML_Logo.pdf
+travis_cpp_tutorial.tex
+images/SFML Logo.pdf
