--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_install:
 install:
   - sudo apt-get install -qq lyx
   - sudo apt-get install -qq texlive
-  - sudo apt-get install -qq texlive*
+  # - sudo apt-get install -qq texlive*
+texlive-latex-extra
   #- sudo apt-get install -qq texlive-fonts-extra
   - sudo apt-get install -qq pgf
   - sudo apt-get install -qq graphviz
@@ -17,12 +18,12 @@ install:
 
 script:
   - ./download_other_githubs.sh
-  - kpsewhich tkz-graph.sty
-  - ./build_pdf.sh
+  # - kpsewhich tkz-graph.sty
+  # - ./build_pdf.sh
 
 after_script:
-  - ls
-  - kpsewhich tkz-graph.sty
+  # - ls
+  # - kpsewhich tkz-graph.sty
 
 
 
