--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ before_install:
 install:
   - sudo apt-get install -qq lyx
   - sudo apt-get install -qq texlive
-  # - sudo apt-get install -qq texlive*
-texlive-latex-extra
+  #- sudo apt-get install -qq texlive*
+  #- sudo apt-get install -qq texlive-latex-extra
   #- sudo apt-get install -qq texlive-fonts-extra
   - sudo apt-get install -qq pgf
   - sudo apt-get install -qq graphviz
