--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: Tutorial how to use Travis CI with C++
-repo_url: https://github.com/flywire/travis_cpp_tutorial/edit/Development/docs/Tutorial.md
+repo_url: https://github.com/flywire/travis_cpp_tutorial/
+edit_uri: edit/Development/docs/
 
 theme:
     name: material
@@ -10,6 +11,7 @@ markdown_extensions:
     - admonition
     - def_list
     - nl2br
+    - pymdownx.snippets:
 
 extra_css:
     - css/extra.css
@@ -18,4 +20,4 @@ plugins:
     - search
 
 nav:
-    - 'Tutorial': 'Tutorial.md'
+    - Tutorial: index.md
