Added '.sh' to shell script filenames

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   #- sudo tlmgr pgf ms
 
 script:
-  - ./download_other_githubs
+  - ./download_other_githubs.sh
   # - kpsewhich tkz-graph.sty
   # - ./build_pdf.sh
 
